fix overflow

--- a/src/_codes.scss
+++ b/src/_codes.scss
@@ -1,6 +1,7 @@
 pre {
   background: $bg-color;
   border-left: 3px solid $primary-color;
+  margin: 1em 0;
   code {
     display: block;
     font-family: Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace;
